--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
-spring.datasource.url = jdbc:mysql://localhost:3306/katabd
+spring.datasource.url = jdbc:mysql://mysql:3306/katabd
+
 spring.datasource.username = best
 spring.datasource.password = best
 
